fix(): jobs constructor